button fix on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -490,7 +490,7 @@ p {
 	}
 
 .header-title{
-	padding-left: 5px;
+	padding-left: 15px;
 	color: #000;
 	text-decoration: none;
 }	
